--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,14 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.4
+
+
 
 dev_dependencies:
   flutter_test:
