--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
+ 
+  firebase_core: ^2.25.4
+  firebase_storage: ^11.6.5
+  firebase_messaging: ^14.7.15
+  google_sign_in: ^6.2.1
 
 
 
