--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
  
   firebase_core: ^2.25.4
   firebase_storage: ^11.6.5
+  firebase_core_web: ^2.11.4
+  firebase_auth_web: ^5.9.5
 
 
 
