--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
- 
+  shared_preferences: ^2.0.10
+
   firebase_core: ^2.25.4
   firebase_storage: ^11.6.5
   firebase_core_web: ^2.11.4
